tests/baselines/reference/parserForInStatement6.errors.txt
==== tests/cases/compiler/parserForInStatement6.ts (2 errors) ====
    for (var a = 1, b = 2 in X) {
         ~~~~~~~~~~~~~~~~
!!! parserForInStatement6.ts(1,6): error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
                             ~
!!! parserForInStatement6.ts(1,26): error TS2095: Cannot find name 'X'.
    }